--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,21 +13,76 @@
 #     - tag: AngularJS
 #     - tag: Node
 
-- name: project X
-  descr: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam"
-  demo: https://example.com/
+- name: AutoChess Copy
+  descr: "DirectX 11와 Win32 Api 사용한 자체 엔진 제작 및 오토체스 게임 모작(Copy)"
+  git: https://github.com/MYOMYO3/DirectX_3D_Portfolio
+  demo: https://www.youtube.com/watch?v=m6Gt65MriYw
   tags:
-    - tag: MongoDB
-    - tag: Express
-    - tag: AngularJS
-    - tag: Node
+    - tag: C++
+    - tag: DirectX11
+    - tag: HLSL
+    - tag: STL
+    - tag: FMOD
+    - tag: WinAPI
+    - tag: FontWrapper
 
-- name: project Y
-  descr: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam"
-  demo: https://example.com/
+- name: Insaniaquarium Copy
+  descr: "DirectX 11와 Win32 Api 사용한 자체 엔진 제작 및 광란의 수족관 게임 모작(Copy)"
+  git: https://github.com/MYOMYO3/Direct2D_Portfolio
+  demo: https://www.youtube.com/watch?v=9pA_mgLUzec
   tags:
-    - tag: Python
-    - tag: Django
+    - tag: C++
+    - tag: DirectX11
+    - tag: HLSL
+    - tag: STL
+    - tag: FMOD
+    - tag: WinAPI
+    - tag: FontWrapper
+    
+- name: MegamanX6 Copy
+  descr: "Win32 Api 사용한 자체 엔진 제작 및 메가맨X6 게임 모작(Copy)"
+  git: https://github.com/MYOMYO3/WindowsAPI_Portfolio
+  demo: https://www.youtube.com/watch?v=bxvlhTq5BZI
+  tags:
+    - tag: C++
+    - tag: DirectX11
+    - tag: HLSL
+    - tag: STL
+    - tag: FMOD
+    - tag: WinAPI
+    - tag: FontWrapper
 
-- name: project Z
-  descr: "You can also set a project without demo link and no tags"
+- name: VAPOR WORLD
+  descr: "Vapor World 인디팀 개발 참여"
+  demo: https://www.youtube.com/watch?v=J7N81zke5QY
+  tags:
+    - tag: C#
+    - tag: Unity Engine
+    
+- name: Luna Defense
+  descr: "데이브 스튜디오 루나 디펜스게임 개발(아트 + 프로그래머 2인개발)"
+  demo: https://www.youtube.com/watch?v=MHyaNtlv5MY
+  tags:
+    - tag: C#
+    - tag: Unity Engine
+    
+- name: Chat Program
+  descr: "TCP/UDP통신을 QT 라이브러리를 사용하여 만든 채팅 프로그램"
+  demo_01: https://www.youtube.com/watch?v=1bweL14hUNo
+  demo_02: https://www.youtube.com/watch?v=x4I2msHsUsU
+  tags:
+    - tag: C++
+    - tag: QT
+    
+- name: YamYam Engine
+  descr: "OpenGL, SDL을 활용하여 렌더링 엔진 개발(개인 프로젝트)"
+  git: https://github.com/MYOMYO3/YamYamEngine
+  tags:
+    - tag: C++
+    - tag: OpenGL
+    - tag: GLSL
+    - tag: SDL
+    - tag: FMOD
+    - tag: Assimp
+    - tag: SOIL
+    
