--- a/_data/skills-languages.yml
+++ b/_data/skills-languages.yml
@@ -5,38 +5,18 @@
 # - name: Language
 #   weight: 5
 
-- name: TypeScript
+- name: C++
   weight: 5
 
-- name: JavaScript
+- name: C
   weight: 4
 
-- name: Python
+- name: C#
+  weight: 2
+  
+- name: Glsl
+  weight: 2
+  
+- name: hlsl
   weight: 2
 
-- name: HTML5
-  weight: 4
-
-- name: CSS3
-  weight: 3
-
-- name: SASS
-  weight: 3
-
-- name: Java
-  weight: 1
-
-- name: Dart
-  weight: 1
-
-- name: Swift
-  weight: 1
-
-- name: Kotlin
-  weight: 1
-
-- name: C++
-  weight: 2
-
-- name: Ruby
-  weight: 2
