--- a/_data/skills-tools.yml
+++ b/_data/skills-tools.yml
@@ -8,29 +8,14 @@
 - name: Git
   weight: 5
 
-- name: Bash
+- name: TortoiseSVN
   weight: 3
 
-- name: Scrum
+- name: Visual Studio 
   weight: 3
-
-- name: Travis CI
-  weight: 1
-
-- name: Jenkins
-  weight: 1
-
-- name: Chrome DevTools
-  weight: 2
-
-- name: npm
-  weight: 2
-
-- name: gulp
-  weight: 4
 
 - name: VS Code
   weight: 3
 
-- name: Postman
-  weight: 4
+- name: Source Tree
+  weight: 2
