--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ username: LeeJunJae
 # > set this to your job title, e.g. Fullstack Developer
 typing_text: portfolio
 # email: Your E-Mail address for the email button.
-email: email@example.com
+email: aquarius4785@gmail.com
 # For every social button you want to display, set your username or userid
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
-github_username: longpdo
+github_username: eazuooz
 codepen_username: exampleUser
 dev_username: exampleUser
 linkedin_username: exampleUser
