--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -15,7 +15,7 @@
 
 - name: AutoChess Copy
   descr: "DirectX 11와 Win32 Api 사용한 자체 엔진 제작 및 오토체스 게임 모작(Copy)"
-  git: https://github.com/MYOMYO3/DirectX_3D_Portfolio
+  git: https://github.com/eazuooz/DirectX_3D_Portfolio
   demo: https://www.youtube.com/watch?v=m6Gt65MriYw
   tags:
     - tag: C++
@@ -28,7 +28,7 @@
 
 - name: Insaniaquarium Copy
   descr: "DirectX 11와 Win32 Api 사용한 자체 엔진 제작 및 광란의 수족관 게임 모작(Copy)"
-  git: https://github.com/MYOMYO3/Direct2D_Portfolio
+  git: https://github.com/eazuooz/Direct2D_Portfolio
   demo: https://www.youtube.com/watch?v=9pA_mgLUzec
   tags:
     - tag: C++
@@ -41,7 +41,7 @@
     
 - name: MegamanX6 Copy
   descr: "Win32 Api 사용한 자체 엔진 제작 및 메가맨X6 게임 모작(Copy)"
-  git: https://github.com/MYOMYO3/WindowsAPI_Portfolio
+  git: https://github.com/eazuooz/WindowsAPI_Portfolio
   demo: https://www.youtube.com/watch?v=bxvlhTq5BZI
   tags:
     - tag: C++
@@ -65,6 +65,8 @@
   tags:
     - tag: C#
     - tag: Unity Engine
+    - tag: Network
+    - tag: DB
     
 - name: Chat Program
   descr: "TCP/UDP통신을 QT 라이브러리를 사용하여 만든 채팅 프로그램"
@@ -76,7 +78,7 @@
     
 - name: YamYam Engine
   descr: "OpenGL, SDL을 활용하여 렌더링 엔진 개발(개인 프로젝트)"
-  git: https://github.com/MYOMYO3/YamYamEngine
+  git: https://github.com/eazuooz/YamYamEngine_OpenGL
   tags:
     - tag: C++
     - tag: OpenGL
