--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -34,6 +34,8 @@
    tags:
      - tag: C#
      - tag: Unity
+     - tag: Game Network
+     - tag: DB / OS
    timeline-side: right
       
  - title: Vapor World Indigame
