--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -82,8 +82,8 @@
     
 - name: Chatting Program
   descr: "TCP/UDP통신을 QT 라이브러리를 사용하여 만든 채팅 프로그램"
-  demo_TCP : https://www.youtube.com/watch?v=1bweL14hUNo
-  demo_UDP : https://www.youtube.com/watch?v=x4I2msHsUsU
+  demo : https://www.youtube.com/watch?v=1bweL14hUNo
+  demo : https://www.youtube.com/watch?v=x4I2msHsUsU
   tags:
     - tag: C++
     - tag: QT
