--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -62,7 +62,7 @@
 - name: Luna Defense
   descr: "데이브 스튜디오 루나 디펜스게임 개발(아트 + 프로그래머 2인개발)"
   demo: https://www.youtube.com/watch?v=MHyaNtlv5MY
-  git: https://andy_bo@bitbucket.org/andy_bo/luna_fd_source/src/master/
+  git: https://bitbucket.org/andy_bo/luna_fd_source/src/master/
   tags:
     - tag: C#
     - tag: Unity Engine
