--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -38,7 +38,7 @@
      - tag: DB / OS
    timeline-side: right
       
- - title: Vapor World Indigame
+ - title: Indigame Development
    title-url: https://www.youtube.com/watch?v=J7N81zke5QY
    date: Jan 2021 - Mar 2021
    subtitle: Client Programmer
