--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -19,7 +19,7 @@
 
  - title: assortrock
    title-url: https://assortrock.com/
-   date: Set 2022 - Currnet
+   date: 2022 - Currnet
    subtitle: Teach Game Programming
    tags:
      - tag: C / C++
@@ -29,7 +29,7 @@
    
  - title: Dave Studio
    title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
-   date: Mar 2021 - Mar 2022
+   date: 2021 - 2022
    subtitle: Luna Defense freelancer Programmer
    tags:
      - tag: C#
@@ -40,7 +40,7 @@
    
     - title: assortrock
    title-url: https://assortrock.com/
-   date: Mar 2021 - Aug 2021
+   date: 2021 - 2021
    subtitle: Learning Game Network Programming
    tags:
      - tag: C / C++
@@ -50,7 +50,7 @@
       
  - title: Indigame Development
    title-url: https://www.youtube.com/watch?v=J7N81zke5QY
-   date: Jan 2021 - Mar 2021
+   date: 2021 - 2021
    subtitle: Client Programmer
    tags:
      - tag: C#
@@ -59,7 +59,7 @@
    
  - title: Neople
    title-url: https://www.neople.co.kr/neople/main/
-   date: Sep 2020 - Dec 2012
+   date: 2020 - 2020
    subtitle: Dungeon and Fighter Client Team
    tags:
      - tag: C++
@@ -68,7 +68,7 @@
       
  - title: assortrock
    title-url: https://assortrock.com/
-   date: Jan 2019 - Jun 2020
+   date: 2018 - 2019
    subtitle: Learning Game Client Programming 
    tags:
      - tag: C / C++
@@ -80,7 +80,7 @@
       
  - title: MinCode Algorithm
    title-url: https://mincoding.co.kr/
-   date: Jun 2018 - Dec 2018
+   date: 2018 - 2018
    subtitle: Learning Algorithm problem solving
    tags:
      - tag: C
