--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -60,7 +60,7 @@
  - title: Neople
    title-url: https://www.neople.co.kr/neople/main/
    date: 2020 - 2020
-   subtitle: Dungeon and Fighter Client Team
+   subtitle: Dungeon and Fighter Client
    tags:
      - tag: C++
      - tag: Confluence
