--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -15,39 +15,73 @@
 #     - tag: Ruby
 #     - tag: Rails
 #   timeline-side: right
+#
 
  - title: assortrock
    title-url: https://assortrock.com/
-   date: Mar 2021 - Aug 2021
-   subtitle: Game Network Programming
+   date: ㅤ 2022 - ㅤ Currnet
+   subtitle: Teach Game Programming
    tags:
      - tag: C / C++
-     - tag: Game Network
-Expand All
-	@@ -29,7 +39,7 @@
-
+     - tag: WinAPI
+     - tag: DirectX
+   timeline-side: right
+   
  - title: Dave Studio
    title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
-   date: Mar 2021 - Current
+   date: ㅤ 2021 - ㅤ 2022
    subtitle: Luna Defense freelancer Programmer
    tags:
      - tag: C#
-Expand Down
-Expand Up
-	@@ -59,7 +69,7 @@
+     - tag: Unity
+     - tag: Game Network
+     - tag: DB / OS
+   timeline-side: right
+   
+    - title: assortrock
+   title-url: https://assortrock.com/
+   date: ㅤ 2021 - ㅤ 2021
+   subtitle: Learning Game Network Programming
+   tags:
+     - tag: C / C++
+     - tag: Game Network
+     - tag: OS
+   timeline-side: left
+      
+ - title: Indigame Development
+   title-url: https://www.youtube.com/watch?v=J7N81zke5QY
+   date: ㅤ 2021 - ㅤ 2021
+   subtitle: Client Programmer
+   tags:
+     - tag: C#
+     - tag: Unity
+   timeline-side: right
+   
+ - title: Neople
+   title-url: https://www.neople.co.kr/neople/main/
+   date: ㅤ 2020 - ㅤ 2020
+   subtitle: Dungeon and Fighter Client
+   tags:
+     - tag: C++
+     - tag: Confluence
+   timeline-side: right
+      
  - title: assortrock
    title-url: https://assortrock.com/
-   date: Jan 2019 - Jun 2020
-   subtitle: Game Network Programming
+   date: ㅤ 2018 - ㅤ 2019
+   subtitle: Learning Game Client Programming 
    tags:
      - tag: C / C++
      - tag: STL
-Expand All
-	@@ -71,7 +81,7 @@
+     - tag: WinAPI
+     - tag: DirectX11
+     - tag: Game Engine Framework
+   timeline-side: left
+      
  - title: MinCode Algorithm
    title-url: https://mincoding.co.kr/
-   date: Jun 2018 - Dec 2018
-   subtitle: Algorithm problem solving
+   date: ㅤ 2018 - ㅤ 2018
+   subtitle: Learning Algorithm problem solving
    tags:
      - tag: C
      - tag: Data Structure
