--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -19,7 +19,7 @@
 
  - title: assortrock
    title-url: https://assortrock.com/
-   date: ㅤ 2022 - ㅤ Currnet
+   date: t 2022 - t Currnet
    subtitle: Teach Game Programming
    tags:
      - tag: C / C++
@@ -29,7 +29,7 @@
    
  - title: Dave Studio
    title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
-   date: ㅤ 2021 - ㅤ 2022
+   date: t 2021 - t 2022
    subtitle: Luna Defense freelancer Programmer
    tags:
      - tag: C#
@@ -40,7 +40,7 @@
    
     - title: assortrock
    title-url: https://assortrock.com/
-   date: ㅤ 2021 - ㅤ 2021
+   date: t 2021 - t 2021
    subtitle: Learning Game Network Programming
    tags:
      - tag: C / C++
@@ -50,7 +50,7 @@
       
  - title: Indigame Development
    title-url: https://www.youtube.com/watch?v=J7N81zke5QY
-   date: ㅤ 2021 - ㅤ 2021
+   date: t 2021 - t 2021
    subtitle: Client Programmer
    tags:
      - tag: C#
@@ -59,7 +59,7 @@
    
  - title: Neople
    title-url: https://www.neople.co.kr/neople/main/
-   date: ㅤ 2020 - ㅤ 2020
+   date: t 2020 - t 2020
    subtitle: Dungeon and Fighter Client
    tags:
      - tag: C++
@@ -68,7 +68,7 @@
       
  - title: assortrock
    title-url: https://assortrock.com/
-   date: ㅤ 2018 - ㅤ 2019
+   date: t 2018 - t 2019
    subtitle: Learning Game Client Programming 
    tags:
      - tag: C / C++
@@ -80,7 +80,7 @@
       
  - title: MinCode Algorithm
    title-url: https://mincoding.co.kr/
-   date: ㅤ 2018 - ㅤ 2018
+   date: t 2018 - t 2018
    subtitle: Learning Algorithm problem solving
    tags:
      - tag: C
