--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -4,6 +4,7 @@
 # > subtitle: The description under the title
 # > tags: List of tags you want to associate with the entry
 # > timeline-side: The side on which you want to display the entry: left or right
+
 # Example of a timeline entry
 # - title: airbnb
 #   title-url: https://example.com/
@@ -15,11 +16,10 @@
 #     - tag: Ruby
 #     - tag: Rails
 #   timeline-side: right
-#
 
  - title: assortrock
    title-url: https://assortrock.com/
-   date: Aug 2022 - Aug Currnet
+   date: Set 2022 - Currnet
    subtitle: Teach Game Programming
    tags:
      - tag: C / C++
@@ -29,7 +29,7 @@
    
  - title: Dave Studio
    title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
-   date: Aug 2021 - Aug 2022
+   date: Mar 2021 - Mar 2022
    subtitle: Luna Defense freelancer Programmer
    tags:
      - tag: C#
@@ -40,7 +40,7 @@
    
     - title: assortrock
    title-url: https://assortrock.com/
-   date: Aug 2021 - Aug 2021
+   date: Mar 2021 - Aug 2021
    subtitle: Learning Game Network Programming
    tags:
      - tag: C / C++
@@ -50,7 +50,7 @@
       
  - title: Indigame Development
    title-url: https://www.youtube.com/watch?v=J7N81zke5QY
-   date: Aug 2021 - Aug 2021
+   date: Jan 2021 - Mar 2021
    subtitle: Client Programmer
    tags:
      - tag: C#
@@ -59,8 +59,8 @@
    
  - title: Neople
    title-url: https://www.neople.co.kr/neople/main/
-   date: Aug 2020 - Aug 2020
-   subtitle: Dungeon and Fighter Client
+   date: Sep 2020 - Dec 2012
+   subtitle: Dungeon and Fighter Client Team
    tags:
      - tag: C++
      - tag: Confluence
@@ -68,7 +68,7 @@
       
  - title: assortrock
    title-url: https://assortrock.com/
-   date: Aug 2018 - Aug 2019
+   date: Jan 2019 - Jun 2020
    subtitle: Learning Game Client Programming 
    tags:
      - tag: C / C++
@@ -80,7 +80,7 @@
       
  - title: MinCode Algorithm
    title-url: https://mincoding.co.kr/
-   date: Aug 2018 - Aug 2018
+   date: Jun 2018 - Dec 2018
    subtitle: Learning Algorithm problem solving
    tags:
      - tag: C
