--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -4,7 +4,6 @@
 # > subtitle: The description under the title
 # > tags: List of tags you want to associate with the entry
 # > timeline-side: The side on which you want to display the entry: left or right
-
 # Example of a timeline entry
 # - title: airbnb
 #   title-url: https://example.com/
@@ -19,17 +18,17 @@
 
  - title: assortrock
    title-url: https://assortrock.com/
-   date: Set 2022 - Currnet
-   subtitle: Teach Game Programming
+   date: Mar 2021 - Aug 2021
+   subtitle: Game Network Programming
    tags:
      - tag: C / C++
-     - tag: WinAPI
-     - tag: DirectX
-   timeline-side: right
-   
+     - tag: Game Network
+     - tag: OS
+   timeline-side: left
+
  - title: Dave Studio
    title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
-   date: Mar 2021 - Mar 2022
+   date: Mar 2021 - Current
    subtitle: Luna Defense freelancer Programmer
    tags:
      - tag: C#
@@ -37,16 +36,6 @@
      - tag: Game Network
      - tag: DB / OS
    timeline-side: right
-   
-    - title: assortrock
-   title-url: https://assortrock.com/
-   date: Mar 2021 - Aug 2021
-   subtitle: Learning Game Network Programming
-   tags:
-     - tag: C / C++
-     - tag: Game Network
-     - tag: OS
-   timeline-side: left
       
  - title: Indigame Development
    title-url: https://www.youtube.com/watch?v=J7N81zke5QY
@@ -69,7 +58,7 @@
  - title: assortrock
    title-url: https://assortrock.com/
    date: Jan 2019 - Jun 2020
-   subtitle: Learning Game Client Programming 
+   subtitle: Game Network Programming
    tags:
      - tag: C / C++
      - tag: STL
@@ -81,7 +70,7 @@
  - title: MinCode Algorithm
    title-url: https://mincoding.co.kr/
    date: Jun 2018 - Dec 2018
-   subtitle: Learning Algorithm problem solving
+   subtitle: Algorithm problem solving
    tags:
      - tag: C
      - tag: Data Structure
