--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -18,17 +18,17 @@
 
  - title: assortrock
    title-url: https://assortrock.com/
-   date: Mar 2021 - Aug 2021
-   subtitle: Game Network Programming
+   date: 2022 - current
+   subtitle: Teaching Game Programming
    tags:
      - tag: C / C++
-     - tag: Game Network
+     - tag: Directx11, Win32, Game Engine Framework
      - tag: OS
    timeline-side: left
 
  - title: Dave Studio
    title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
-   date: Mar 2021 - Current
+   date: 2021 - 2022
    subtitle: Luna Defense freelancer Programmer
    tags:
      - tag: C#
@@ -39,7 +39,7 @@
       
  - title: Indigame Development
    title-url: https://www.youtube.com/watch?v=J7N81zke5QY
-   date: Jan 2021 - Mar 2021
+   date: 2021 - 2021
    subtitle: Client Programmer
    tags:
      - tag: C#
@@ -48,8 +48,8 @@
    
  - title: Neople
    title-url: https://www.neople.co.kr/neople/main/
-   date: Sep 2020 - Dec 2012
-   subtitle: Dungeon and Fighter Client Team Intern
+   date: 2020 - 2020
+   subtitle: Dungeon and Fighter Client Team
    tags:
      - tag: C++
      - tag: Confluence
@@ -57,8 +57,8 @@
       
  - title: assortrock
    title-url: https://assortrock.com/
-   date: Jan 2019 - Jun 2020
-   subtitle: Game Network Programming
+   date: 2019 - 2019
+   subtitle: Game Programming
    tags:
      - tag: C / C++
      - tag: STL
@@ -69,7 +69,7 @@
       
  - title: MinCode Algorithm
    title-url: https://mincoding.co.kr/
-   date: Jun 2018 - Dec 2018
+   date: 2018 - 2018
    subtitle: Algorithm problem solving
    tags:
      - tag: C
