--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,8 +14,8 @@
 #     - tag: Node
 
 - name: Luna Defense
-  descr: "데이브 스튜디오 루나 디펜스게임 개발(아트 + 프로그래머 2인개발)"
-  demo: https://www.youtube.com/watch?v=fkLOiPEkgPw
+  descr: "인디 개발(아트 + 프로그래머 2인개발)"
+  demo: https://youtu.be/8lP2S5Z1PkA
   Build: https://drive.google.com/file/d/1O1oCTjpXczy2vTgu_qMrqYEWyzUiPTss/view?usp=sharing
   tags:
     - tag: C#
