--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,7 +16,7 @@
 - name: Luna Defense
   descr: "인디 개발(아트 + 프로그래머 2인개발)"
   demo: https://youtu.be/8lP2S5Z1PkA
-  Build: https://drive.google.com/file/d/1O1oCTjpXczy2vTgu_qMrqYEWyzUiPTss/view?usp=sharing
+  #Build: https://drive.google.com/file/d/1O1oCTjpXczy2vTgu_qMrqYEWyzUiPTss/view?usp=sharing
   tags:
     - tag: C#
     - tag: Unity Engine
