--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,11 @@ email: eazuooz@gmail.com
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
 github_username: eazuooz
-codepen_username: exampleUser
-dev_username: exampleUser
-linkedin_username: exampleUser
-twitter_username: exampleUser
+youtube_username: yamyamcoding
+#codepen_username: exampleUser
+#dev_username: exampleUser
+#linkedin_username: exampleUser
+#twitter_username: exampleUser
  
 # ABOUT ME SECTION
 # show_aboutme_card:
