--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -29,10 +29,11 @@
  - title: Dave Studio
    title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
    date: 2021 - 2022
-   subtitle: Luna Defense freelancer Programmer
+   subtitle: freelancer Programmer
    tags:
      - tag: C#
      - tag: Unity
+     - tag: Award indigame pasttrack
    timeline-side: right
      
  - title: Neople
