--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ email: eazuooz@gmail.com
 # > twitter_username:
 github_username: eazuooz
 youtube_username: yamyamcoding
-notion_username: yamyamcoding
+#notion_username: yamyamcoding
 #codepen_username: exampleUser
 #dev_username: exampleUser
 #linkedin_username: exampleUser
