--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -16,6 +16,17 @@
 #     - tag: Rails
 #   timeline-side: right
 
+ - title: yamyamcoding
+   title-url: https://yamyamcoding.oopy.io
+   title-url: https://www.youtube.com/channel/UCOgtkPoyC0VXhCs7Xk3jvjQ
+   date: current
+   subtitle: Teaching Game Programming
+   tags:
+     - tag: C / C++
+     - tag: Directx11, GraphicsProgramming, WinAPI, Game Engine Framework
+     - tag: OS
+   timeline-side: left
+
  - title: assortrock
    title-url: https://assortrock.com/
    date: 2022 - 2023
