--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -36,6 +36,14 @@
      - tag: OS
    timeline-side: left
 
+ - title: Korea National Open University
+   title-url: https://www.knou.ac.kr/knou/index.do?epTicket=LOG
+   date: 2021 - 2024
+   subtitle: Learning computer science
+   tags:
+     - tag: Computer Science
+   timeline-side: left
+
  - title: Dave Studio
    title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
    date: 2021 - 2022
