--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -37,7 +37,7 @@
  - title: Korea National Open University
    title-url: https://www.knou.ac.kr/knou/index.do?epTicket=LOG
    date: 2021 - 2024
-   subtitle: Learning computer science
+   subtitle: Bachelor’s Degree in Computer Science
    tags:
      - tag: Computer Science
    timeline-side: left
