--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,6 +13,14 @@
 #     - tag: AngularJS
 #     - tag: Node
 
+- name: YamYam_Engine(Window)
+  descr: "Directx11, imgui를 사용하여 렌더링 엔진 개발(개인 프로젝트)"
+  git: https://github.com/eazuooz/YamYam_Engine
+  tags:
+    - tag: C++
+    - tag: Directx
+    - tag: HLSL
+
 - name: Luna Defense
   descr: "인디 개발(아트 + 프로그래머 2인개발)"
   demo: https://youtu.be/8lP2S5Z1PkA
