--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -35,7 +35,7 @@
    timeline-side: left
 
  - title: Korea National Open University
-   title-url: https://www.knou.ac.kr/knou/index.do?epTicket=LOG
+   #title-url: https://www.knou.ac.kr/knou/index.do?epTicket=LOG
    date: 2021 - 2024
    subtitle: Bachelor’s Degree in Computer Science
    tags:
@@ -43,7 +43,7 @@
    timeline-side: left
 
  - title: Dave Studio
-   title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
+   #title-url: https://www.saramin.co.kr/zf_user/company-info/view/csn/NUZSWUw2WjNCdUNEZXBVQzJsa0FjQT09/company_nm/%EB%8D%B0%EC%9D%B4%EB%B8%8C%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4
    date: 2021 - 2022
    subtitle: freelancer Programmer
    tags:
@@ -53,7 +53,7 @@
    timeline-side: right
      
  - title: Neople
-   title-url: https://www.neople.co.kr/neople/main/
+   #title-url: https://www.neople.co.kr/neople/main/
    date: 2020 - 2020
    subtitle: Dungeon and Fighter Client Team
    tags:
