--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -20,14 +20,13 @@
     - tag: WindowsAPI
 
 - name: C++ GameEnigne Rendering Lecture
-  descr: "Directx11을 이용한 게임 엔진 만들기 강의 런칭"
+  descr: "Directx11을 이용한 렌더링 엔진 만들기 강의 런칭"
   demo: https://inf.run/X6NSM
   tags:
     - tag: C++
     - tag: DirectX
-    _ tag: HLSL
     - tag: WindowsAPI
-  
+
 - name: Game Programming Job Interview Lecture
   descr: "게임 프로그래밍 취업 질의응답 강의 런칭"
   demo: https://inf.run/SXS6z
