--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -32,7 +32,7 @@
      - tag: C / C++
      - tag: GraphicsProgramming, Engine Framework
      - tag: OS
-   timeline-side: left
+   timeline-side: right
 
  - title: Korea National Open University
    #title-url: https://www.knou.ac.kr/knou/index.do?epTicket=LOG
