--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,6 +12,14 @@
 #     - tag: Express
 #     - tag: AngularJS
 #     - tag: Node
+
+- name: Game Programming Mathmathics
+  descr: "게임개발을 위한 수학"
+  demo: https://inf.run/zznH1
+  tags:
+    - tag: Game Programming
+    - tag: Mathmathics
+
 - name: C++ GameEnigne Framework Lecture
   descr: "C++을 이용한 자체 엔진 제작(유니티 엔진 클론코딩) 강의 런칭"
   demo: https://inf.run/dnN3k
