--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -15,21 +15,21 @@
 
 - name: Game Programming Mathmathics
   descr: "게임개발을 위한 수학"
-  demo: https://inf.run/zznH1
+  link: https://inf.run/zznH1
   tags:
     - tag: Game Programming
     - tag: Mathmathics
 
 - name: C++ GameEnigne Framework Lecture
   descr: "C++을 이용한 자체 엔진 제작(유니티 엔진 클론코딩) 강의 런칭"
-  demo: https://inf.run/dnN3k
+  link: https://inf.run/dnN3k
   tags:
     - tag: C++
     - tag: WindowsAPI
 
 - name: C++ GameEnigne Rendering Lecture
   descr: "Directx11을 이용한 렌더링 엔진 만들기 강의 런칭"
-  demo: https://inf.run/X6NSM
+  link: https://inf.run/X6NSM
   tags:
     - tag: C++
     - tag: DirectX
@@ -37,7 +37,7 @@
     
 - name: Game Programming Job Interview Lecture
   descr: "게임 프로그래밍 취업 질의응답 강의 런칭"
-  demo: https://inf.run/SXS6z
+  link: https://inf.run/SXS6z
   tags:
     - tag: C++
     - tag: DirectX
@@ -45,13 +45,13 @@
 
 - name: Self Programming in C++
   descr: "C++ 기초 강의 런칭"
-  demo: https://inf.run/rhUkF
+  link: https://inf.run/rhUkF
   tags:
     - tag: C++
 
 - name: Self DataStructure/Algorithm Programming in C++
   descr: "C++ 기초 자료구조/알고리즘 강의 런칭"
-  demo: https://inf.run/d4Lg7
+  link: https://inf.run/d4Lg7
   tags:
     - tag: C++
     - tag: DataStructure
